# pisito_agent

./: .env.example  .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
Docker/: Dockerfile  docker-compose.yml  entrypoint.sh
launch/: default.launch.py  langgraph.launch.py  smolagents.launch.py
params/: default_params.yaml  langgraph_mcp.json  mcp.json
pisito_agent/: agent.py  custom_agent.py  custom_model.py  fake_mcp_server.py  langgraph_base.py  langgraph_functions.py  langgraph_home_assistant.py  langgraph_ros_agent.py  langgraph_ros_base.py  langgraph_ros_home_assistant_agent.py  ollama_utils.py  smolagent_custom_agent.py  smolagent_custom_model.py  smolagent_ros_agent.py
templates/: system_prompt.jinja
test/: test_langgraph_functions.py  test_langgraph_home_assistant.py  test_ollama_utils.py
uv/: pyproject.toml
