[project]
name = "pisito-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp==2.12.3",
    "jinja2==3.1.4",
    "jsonschema>=4.25.1",
    "langchain>=0.0.27",
    "langchain-chroma>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph==0.6.7",
    "langgraph-api>=0.4.48",
    "langgraph-cli>=0.4.7",
    "langgraph-prebuilt>=0.6.5",
    "langgraph-runtime-inmem>=0.14.1",
    "langgraph-sdk>=0.2.9",
    "ollama==0.6.0",
]
